test/visibility/import/rename/renameNoLeak.good
renameNoLeak.chpl:8: In function 'main':
renameNoLeak.chpl:9: error: 'y' undeclared (first use this function)
